src/css/about.css
.about {
  display: flex;
  flex-direction: column;
  right: 0;
  bottom: 0;
  left: 0;
  background: #eeeeee;
  padding: 40px 0;
}

.about-title {
  text-align: center;
  font-size: 1.5rem;
  font-weight: bold;
  margin: 40px 0 30px;
}

.about-link {
  color: inherit;
}

.help-sections {
  width: 80%;
  margin: auto;
}

.help-section {
  width: 100%;
  align-items: center;
  display: flex;
  flex-direction: column;
}
@media screen and (min-width: 600px) {
  .help-sections {
    display: flex;
  }
  .help-section {
    padding: 20px;
  }
}

.help-text {
  padding: 20px 10px;
  text-align: center;
  height: 2rem;
}

.help-input-chart {
  width: 100%;
  min-width: 300px;
}

.help-input-chart td {
  padding: 10px;
}

.help-input-chart tbody tr:nth-child(odd) {
  background-color: #f3f2f2
}
.help-input-chart tbody tr:nth-child(even) {
  background-color: #ffffff;
}

.help-input-chart_header {
  text-align: center;
  opacity: 0.8;
  background-color: var(--main-selected-bg-color);
  color: #ffffff;
  padding: 10px 0;
}

